--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 *{transition: all .1s ease-in;
 box-sizing: border-box;
+padding: 0;
 }
 html {
 	height: 100%;
@@ -26,6 +27,7 @@ body {
 	text-align: center;
 	max-width: 800px;
 	border: 3px solid white;
+	margin: 0 auto;
 }
 .ba-cities li {
 	display: inline-block;
@@ -88,6 +90,7 @@ body {
 .ba-cities li p span{
 	opacity: 0.7;
 }
+
 .ba-header h1 i {
 	opacity: 1;
 	font-size: 30px;
